# magnesium

./: CMakeLists.txt  README.md  magnesium.cpp  magnesium.h
include/mg/: collections.hpp  functional.hpp  math.hpp  sequence.hpp  types.hpp  utility.hpp
include/mg/detail/: collections.hpp  function_traits.hpp  is_instance.hpp  iter_n.hpp  sequence.hpp
tests/: CMakeLists.txt  collections_tests.cpp  functional_tests.cpp  math_tests.cpp  sequence_tests.cpp  types_tests.cpp
